<resources>
    <string name="app_name">web_app</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="pharmassist">PharmAssist</string>
    <string name="une_application_financ_e_par">Une application financée par :</string>
    <string name="demandeCoLog">Pour assurer la sécurité de vos données médicales, nous vous demandons de bien vouloir vous connecter :</string>
    <string name="hint_id">Identifiant</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="se_connecter">Se connecter</string>
    <string name="mot_de_passe_oubli">Mot de passe oublié ?</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="text_inscrip">Si vous n’avez pas encore de compte :</string>
    <string name="forgot_password_msg">Ne vous inquiétez pas ! Cela arrive. Veuillez saisir l\'adresse électronique associée à votre compte. Nous vous enverrons un lien de réinitialisation</string>
    <string name="on_submit_msg">Vérifiez votre boîte aux lettres, vous recevrez un e-mail contenant un lien qui vous permettra de réinitialiser votre mot de passe.</string>
    <string name="Notification"> Je souhaite recevoir les notifications de l’application, notamment celles de disponibilité d’un médicament signalé.</string>

    <string name="inscription">Inscription</string>
    <string name="connexion">Connexion</string>
    <string name="default_web_client_id">YOUR_WEB_CLIENT_ID.apps.googleusercontent.com</string>
    <string name="deco_btn">Se déconnecter</string>
    <string name="title_param">Mes paramètres</string>
</resources>