<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="16dp">

    <ImageButton
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:background="@color/white"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_login_administrator" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:text="@string/demandeCoLog"
        android:textSize="20sp"
        android:paddingBottom="8dp"
        android:layout_marginTop="25dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:minHeight="46dp"
                android:background="@drawable/border_style"
                android:hint="@string/hint_id"
                android:padding="10dp"
                android:layout_marginBottom="8dp"
                android:inputType="number"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:minHeight="46dp"
                android:background="@drawable/border_style"
                android:hint="@string/mot_de_passe"
                android:padding="10dp"
                android:inputType="textPassword"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/connexion"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@drawable/button_background"
        android:minHeight="46dp"
        android:text="@string/se_connecter"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginTop="30dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="#00000000"
        android:fontFamily="@font/inter"
        android:padding="8dp"
        android:text="@string/mot_de_passe_oubli"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"/>

    <View
        android:layout_width="250dp"
        android:layout_height="2dp"
        android:background="@color/bleu_vert_app"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:text="@string/text_inscrip"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/inscription"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:background="@drawable/button_background"
        android:minHeight="46dp"
        android:text="@string/s_inscrire"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginTop="30dp"/>


</LinearLayout>
