<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Connexion"
    >


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/connexion"
        android:textAlignment="center"
        android:textColor="@color/bg"
        android:textSize="34sp"
        android:textStyle="bold"
        android:fontFamily="@font/inter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.019" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/start_end_margin"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="@dimen/start_end_margin"
        app:boxCornerRadiusBottomEnd="@dimen/til_radius"
        app:boxCornerRadiusBottomStart="@dimen/til_radius"
        app:boxCornerRadiusTopEnd="@dimen/til_radius"
        app:boxCornerRadiusTopStart="@dimen/til_radius"

        app:boxStrokeWidth="2dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/et_text_size"
            android:fontFamily="@font/inter"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/start_end_margin"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/start_end_margin"
        app:boxCornerRadiusBottomEnd="@dimen/til_radius"
        app:boxCornerRadiusBottomStart="@dimen/til_radius"
        app:boxCornerRadiusTopEnd="@dimen/til_radius"
        app:boxCornerRadiusTopStart="@dimen/til_radius"
        app:boxStrokeWidth="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilEmail"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Mot de passe"
            android:inputType="textPassword"
            android:textSize="@dimen/et_text_size"
            android:fontFamily="@font/inter"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:text="Mot de passe oublié ?"
        android:textColor="@color/bg"
        android:textSize="18sp"
        android:fontFamily="@font/inter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:paddingHorizontal="15dp"
        android:background="@drawable/button_bg"

        android:text="@string/s_inscrire"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/inter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintVertical_bias="0.531" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/inter"
        android:gravity="center"
        android:text="@string/text_inscrip"
        android:textSize="20sp"

        app:layout_constraintTop_toBottomOf="@+id/view"
        tools:layout_editor_absoluteX="-16dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/btnSignInWithGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"

        android:layout_marginTop="25dp"

        app:cardBackgroundColor="#D3D3D3"
        app:cardCornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="5dp"
                android:src="@drawable/g_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="Login with Google"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/inter"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/view"
        android:layout_width="250dp"
        android:layout_height="2dp"
        android:layout_marginTop="56dp"
        android:background="@color/bleu_vert_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignInWithGoogle" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_bg"
        android:text="Connexion"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/inter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilPassword" />


</androidx.constraintlayout.widget.ConstraintLayout>